usb: fastboot: drop CONFIG_COMMAND_SUPPORT dependency
fastboot can run without command support. In this case we cannot
execute oem commands.

Signed-off-by: Sascha Hauer <s.hauer@pengutronix.de>

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -45,6 +45,7 @@ config USB_GADGET_FASTBOOT
 	bool
 	select BANNER
 	depends on COMMAND_SUPPORT
+	select BOSCH_COMMON
 	prompt "Android Fastboot support"
 
 endif
