--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -189,6 +189,15 @@ config ARCH_SOCFPGA
 	select OFDEVICE if !ARCH_SOCFPGA_XLOAD
 	select OFTREE if !ARCH_SOCFPGA_XLOAD
 
+config ARCH_SUNXI
+	bool "Allwinner A1X SoCs"
+	select COMMON_CLK
+	select CLKDEV_LOOKUP
+	select CPU_V7
+	select HAS_DEBUG_LL
+	select OFDEVICE
+	select OFTREE
+
 config ARCH_S3C24xx
 	bool "Samsung S3C2410, S3C2440"
 	select ARCH_SAMSUNG
@@ -275,6 +284,7 @@ source arch/arm/mach-pxa/Kconfig
 source arch/arm/mach-rockchip/Kconfig
 source arch/arm/mach-samsung/Kconfig
 source arch/arm/mach-socfpga/Kconfig
+source arch/arm/mach-sunxi/Kconfig
 source arch/arm/mach-versatile/Kconfig
 source arch/arm/mach-vexpress/Kconfig
 source arch/arm/mach-tegra/Kconfig
