--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -7,3 +7,5 @@ obj-$(CONFIG_DRIVER_SPI_MXS) += mxs_spi.o
 obj-$(CONFIG_DRIVER_SPI_ALTERA) += altera_spi.o
 obj-$(CONFIG_DRIVER_SPI_ATMEL) += atmel_spi.o
 obj-$(CONFIG_DRIVER_SPI_OMAP3) += omap3_spi.o
+obj-$(CONFIG_DRIVER_SPI_SUN4I) += spi-sun4i.o
+obj-$(CONFIG_DRIVER_SPI_SUN6I) += spi-sun6i.o
